packages/typ/tests/fixtures/diagnostics/0098_core_and_int_09.ml.infer.expected
File "0098_core_and_int_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0098_core_and_int_09 is not a valid module name.

File "0098_core_and_int_09.ml", line 2, characters 40-41:
2 | let final = let local = true in true && 0
                                            ^
Error: The constant 0 has type int but an expression was expected of type
         bool
