packages/typ/tests/fixtures/diagnostics/0098_core_and_int_09.ml
let ( && ) (x : bool) (y : bool) : bool = x
let final = let local = true in true && 0
